--- a/Views/Admin/Enquiries.cshtml
+++ b/Views/Admin/Enquiries.cshtml
@@ -34,7 +34,7 @@
                 <div class="box">
                     <div class="box-header with-border">
                         <h3 class="box-title f-left">@Html.ActionLink("New Enquiry", "Enquiry", "Admin", null, new { @target = "_blank", @class = "btn btn-edt bg-aqua", title = "New Enquiry" })</h3>
-                       @*<h3 class="box-title f-left">@Html.ActionLink("Import Enquiry", "ImportEnquiry", "Admin", null, new { @class = "btn btn-edt bg-green", title = "Import Enquiry" })</h3>*@
+                        <h3 class="box-title f-left">@Html.ActionLink("Import Enquiry", "ImportEnquiry", "Admin", null, new { @target = "_blank", @class = "btn btn-edt bg-green", title = "Import Enquiry" })</h3>
                     </div>
                     <!-- /.box-body -->
                     <div class="box-body">
