Import Enquiry & Import Purchase Order

--- a/Views/Admin/ImportPurchaseOrder.cshtml
+++ b/Views/Admin/ImportPurchaseOrder.cshtml
@@ -116,7 +116,7 @@
                         {
                             <div class="row">
                                 <div class="col-md-12">
-                                    <table id="tblProductExcel" class="table table-bordered display nowrap">
+                                    <table id="tblImportPO" class="table table-bordered display nowrap">
                                         <thead>
                                             <tr>
                                                 <th>SNo.</th>
@@ -129,7 +129,7 @@
                                                 <tr>
                                                     <td></td>
                                                     <td>
-                                                        <a href='~/Content/upload/Excel/@u.PurchaseOrderExcel' class="btn btn-edt bg-aqua" target="_blank">Download</a>
+                                                        <a href='~/Content/upload/poexcel/@u.PurchaseOrderExcel' class="btn btn-edt bg-aqua" target="_blank">Download</a>
                                                     </td>
                                                 </tr>
                                             }
