Import Purchase Order

--- a/Views/Admin/EnquiryReport.cshtml
+++ b/Views/Admin/EnquiryReport.cshtml
@@ -69,7 +69,7 @@
                             </div>
                         </div>
                         <div class="col-md-4">
-                            <div class="form-group">
+                            @*<div class="form-group">
                                 @Html.LabelFor(m => m.EnquiryType, new { @class = "form-control-label" })
                                 @Html.DropDownListFor(m => m.EnquiryType,
                                new List<SelectListItem>
@@ -78,7 +78,7 @@
                                     new SelectListItem{ Text="NON STANDARD", Value = "NON STANDARD", Selected = true },
                                   },
                                 "--Select Type--", new { @class = "form-control select2" })
-                            </div>
+                            </div>*@
                             <div class="box-tools pull-left">
                                 <button type="submit" name="search" class="btn bg-aqua" title="SEARCH"
                                         value="search">
