--- a/Views/Admin/PurchaseOrders.cshtml
+++ b/Views/Admin/PurchaseOrders.cshtml
@@ -34,7 +34,7 @@
                 <div class="box">
                     <div class="box-header with-border">
                         <h3 class="box-title f-left">@Html.ActionLink("New Purchase Order", "PurchaseOrder", "Admin", null, new { @class = "btn btn-edt bg-aqua", title = "New Purchase Order" })</h3>
-                        @*<h3 class="box-title f-left">@Html.ActionLink("Import Purchase Order", "ImportPurchaseOrder", "Admin", null, new { @target = "_blank", @class = "btn btn-edt bg-green", title = "Import Purchase Order" })</h3>*@
+                        <h3 class="box-title f-left">@Html.ActionLink("Import Purchase Order", "ImportPurchaseOrder", "Admin", null, new { @target = "_blank", @class = "btn btn-edt bg-green", title = "Import Purchase Order" })</h3>
                     </div>
                     <!-- /.box-body -->
                     <div class="box-body">
