--- a/Views/Admin/EnquiryReport.cshtml
+++ b/Views/Admin/EnquiryReport.cshtml
@@ -68,17 +68,19 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4">
-                            @*<div class="form-group">
+                        <div class="col-md-2">
+                            <div class="form-group">
                                 @Html.LabelFor(m => m.EnquiryType, new { @class = "form-control-label" })
                                 @Html.DropDownListFor(m => m.EnquiryType,
                                new List<SelectListItem>
                                   {
                                     new SelectListItem{ Text="STANDARD", Value = "STANDARD" },
-                                    new SelectListItem{ Text="NON STANDARD", Value = "NON STANDARD", Selected = true },
+                                    new SelectListItem{ Text="NON STANDARD", Value = "NON STANDARD" },
                                   },
                                 "--Select Type--", new { @class = "form-control select2" })
-                            </div>*@
+                            </div>
+                        </div>
+                            <div class="col-md-2">
                             <div class="box-tools pull-left">
                                 <button type="submit" name="search" class="btn bg-aqua" title="SEARCH"
                                         value="search">
