Multi Brand and Multi Category in Vendor

--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -48,7 +48,7 @@
                                     <li><a href="#">Today <span class="pull-right badge bg-green">@Model.EnqCountModels.OToday</span></a></li>
                                     <li><a href="#">Current Month <span class="pull-right badge bg-red">@Model.EnqCountModels.OCMonth</span></a></li>
                                     <li><a href="#">Current Year <span class="pull-right badge bg-red">@Model.EnqCountModels.OCYear</span></a></li>
-                                    <li><a href="#">Total <span class="pull-right badge bg-red">@Model.EnqCountModels.OTotal</span></a></li>
+                                    @*<li><a href="#">Total <span class="pull-right badge bg-red">@Model.EnqCountModels.OTotal</span></a></li>*@
                                 </ul>
                             </div>
                         </div>
@@ -68,7 +68,7 @@
                                     <li><a href="#">Today <span class="pull-right badge bg-green">@Model.EnqCountModels.PToday</span></a></li>
                                     <li><a href="#">Current Month <span class="pull-right badge bg-red">@Model.EnqCountModels.PCMonth</span></a></li>
                                     <li><a href="#">Current Year <span class="pull-right badge bg-red">@Model.EnqCountModels.PCYear</span></a></li>
-                                    <li><a href="#">Total <span class="pull-right badge bg-red">@Model.EnqCountModels.PTotal</span></a></li>
+                                    @*<li><a href="#">Total <span class="pull-right badge bg-red">@Model.EnqCountModels.PTotal</span></a></li>*@
                                 </ul>
                             </div>
                         </div>
@@ -88,7 +88,7 @@
                                     <li><a href="#">Today <span class="badge bg-green">@Model.POCountModels.OToday</span><span class="pull-right badge bg-green">@Model.POCountModels.OTodayValue</span></a></li>
                                     <li><a href="#">Current Month <span class="badge bg-red">@Model.POCountModels.OCMonth</span><span class="pull-right badge bg-red">@Model.POCountModels.OCMonthValue</span></a></li>
                                     <li><a href="#">Current Year <span class="badge bg-red">@Model.POCountModels.OCYear</span><span class="pull-right badge bg-red">@Model.POCountModels.OCYearValue</span></a></li>
-                                    <li><a href="#">Total <span class="badge bg-red">@Model.POCountModels.OTotal</span><span class="pull-right badge bg-red">@Model.POCountModels.OTotalValue</span></a></li>
+                                    @*<li><a href="#">Total <span class="badge bg-red">@Model.POCountModels.OTotal</span><span class="pull-right badge bg-red">@Model.POCountModels.OTotalValue</span></a></li>*@
                                 </ul>
                             </div>
                         </div>
@@ -108,7 +108,7 @@
                                     <li><a href="#">Today <span class="badge bg-green">@Model.QuotCountModels.OToday</span><span class="pull-right badge bg-green">@Model.QuotCountModels.OTodayValue</span></a></li>
                                     <li><a href="#">Current Month <span class="badge bg-red">@Model.QuotCountModels.OCMonth</span><span class="pull-right badge bg-red">@Model.QuotCountModels.OCMonthValue</span></a></li>
                                     <li><a href="#">Current Year <span class="badge bg-red">@Model.QuotCountModels.OCYear</span><span class="pull-right badge bg-red">@Model.QuotCountModels.OCYearValue</span></a></li>
-                                    <li><a href="#">Total <span class="badge bg-red">@Model.QuotCountModels.OTotal</span><span class="pull-right badge bg-red">@Model.QuotCountModels.OTotalValue</span></a></li>
+                                   @* <li><a href="#">Total <span class="badge bg-red">@Model.QuotCountModels.OTotal</span><span class="pull-right badge bg-red">@Model.QuotCountModels.OTotalValue</span></a></li>*@
                                 </ul>
                             </div>
                         </div>
