--- a/Views/Admin/ApprovedVendor.cshtml
+++ b/Views/Admin/ApprovedVendor.cshtml
@@ -80,9 +80,9 @@
                                             <td></td>
                                             <td>
                                                 @Html.EncodedActionLink("<i class='fa fa-pencil-square-o'></i>", "EditVendorInfo", "Admin",
-                                              new { id = u.Id }, new { @class = "btn btn-edt bg-aqua btn-sm", title = "Edit" })
+                                              new { id = u.Id }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Edit" })
                                                 @Html.EncodedActionLink("<i class='fa fa-user'></i>", "VendorProfile", "Admin",
-                                              new { id = u.Id }, new { @class = "btn btn-edt bg-aqua btn-sm", title = "Profile" })
+                                              new { id = u.Id }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Profile" })
                                                 @if (u.IsActive == true)
                                                 {
                                                     @Html.EncodedActionLink("<i class='fa fa-lock'></i>", "BlockVendor", "Admin",
