--- a/Views/Admin/EditEnquiry.cshtml
+++ b/Views/Admin/EditEnquiry.cshtml
@@ -122,6 +122,7 @@
                                           {
                                             new SelectListItem{ Text="Regular", Value = "Regular", Selected = true  },
                                             new SelectListItem{ Text="Urgent", Value = "Urgent" },
+                                            new SelectListItem{ Text="Portal", Value = "Portal" }
                                           },
                                         "--Select Enq Type--", new { @class = "form-control select2 enqtype" })
                                         @Html.ValidationMessageFor(m => m.EnquiryModels.EnqType, "",
