--- a/Content/custom/main.css
+++ b/Content/custom/main.css
@@ -638,6 +638,10 @@ td.isrcbtn button {
     margin-bottom: 0px !important;
 }
 
+.select2 {
+    margin-bottom: 7px !important;
+}
+
 .m-b-10 {
     margin-bottom: 10px !important;
 }
