State Add now working

--- a/Views/Admin/CompanyGroup.cshtml
+++ b/Views/Admin/CompanyGroup.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Vendor_Indusuno.Extensions
 @model Vendor_Indusuno.ViewModels.CompanyGroupViewModel
 @{
-	ViewBag.Title = "Industry Type";
+	ViewBag.Title = "Company Group";
 	TempData["Master"] = "active";
 	TempData["CompanyGroup"] = "active";
 	Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
